--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
                         <div> <a href="./frontend_mentor/js/article.css">Article Preview Component Master css</a></div>
                         <div> <a href="./frontend_mentor/js/article.html">Article Preview Component Master</a></div>
                         <div> <a href="./frontend_mentor/js/share.html">Share</a></div>
+                        <div> <a href="./frontend_mentor/js/faq.html">FAQ</a></div>
+                        <div> <a href="./frontend_mentor/js/faq.css">FAQ CSS</a></div>
 
 
 
