--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@
                         <div> <a href="./frontend_mentor/js/share.html">Share</a></div>
                         <div> <a href="./frontend_mentor/js/faq.html">FAQ</a></div>
                         <div> <a href="./frontend_mentor/js/faq.css">FAQ CSS</a></div>
+                        <div> <a href="./frontend_mentor/js/intro.css">Intro Component with sign up CSS</a></div>
+                        <div> <a href="./frontend_mentor/js/intro.html">Intro Component with sign up</a></div>
 
 
 
