--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
                         <div> <a href="./frontend_mentor/js/faq.css">FAQ CSS</a></div>
                         <div> <a href="./frontend_mentor/js/intro.css">Intro Component with sign up CSS</a></div>
                         <div> <a href="./frontend_mentor/js/intro.html">Intro Component with sign up</a></div>
+                        <div> <a href="./frontend_mentor/js/ping.html">Ping Coming Soon Page</a></div>
+                        <div> <a href="./frontend_mentor/js/ping.css">Ping Coming Soon Page css</a></div>
 
 
 
