--- a/frontend_mentor/js/ping.html
+++ b/frontend_mentor/js/ping.html
@@ -44,6 +44,7 @@
                 formEmail.focus();
                 return;
             }
+            mail.arrow.submit();
         }
     </script>
 </body>
