--- a/index.html
+++ b/index.html
@@ -6,18 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="index.css">
+    <style>
+        table,
+        th,
+        td {
+            border: 1px Solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 
 <body>
     <div>
         <table scope="col" style="margin:auto">
             <caption>
-                Menu-list of HTML pages
+                <h1>
+                    Menu-list of HTML pages</h1>
             </caption>
             <thead>
                 <tr>
                     <th scope="col">
-                        Pages
+                        HTML Pages
+                    </th>
+                    <th scope="col">
+                        HTML Project
+                    </th>
+                    <th scope="col">
+                        CSS
+                    </th>
+                    <th scope="col">
+                        HTML,CSS Challenges
+                    </th>
+                    <th scope="col">
+                        HTML,CSS,JSS Challenges
                     </th>
                 </tr>
             </thead>
@@ -81,12 +103,6 @@
                             <a href="./src/pager.html">Pager</a>
                         </div>
                         <div>
-                            <a href="./src/tribute.html">Tribute</a>
-                        </div>
-                        <div>
-                            <a href="./src/Survey_form.html">Survey</a>
-                        </div>
-                        <div>
                             <a href="./src/pagej.html">Pagej</a>
 
 
@@ -124,6 +140,16 @@
                         <div>
                             <a href="./src/grand-child-frame.html"> Grand Child Frame</a>
                         </div>
+                    </td>
+
+                    <td>
+                        <div>
+                            <a href="./src/tribute.html">Tribute</a>
+                        </div>
+                        <div>
+                            <a href="./src/Survey_form.html">Survey</a>
+                        </div>
+
                         <div>
                             <a href="./src/stationary_product_launching.html"> Stationary Product Launching</a>
                         </div>
@@ -139,6 +165,8 @@
                         <div>
                             <a href="./src/pen_product_launching.html">Pen Launching page</a>
                         </div>
+                    </td>
+                    <td>
                         <div>
                             <a href="./src/csslessons/page1.html">CSS Lessons:Page 1</a>
                         </div>
@@ -220,6 +248,8 @@
                         <div>
                             <a href="./src/csslessons/page27.css">CSS Lessons:Page 27 css</a>
                         </div>
+                    </td>
+                    <td>
                         <div>
                             <a href="./frontend_mentor/css/qr.css">QR code css</a>
                         </div>
@@ -284,6 +314,8 @@
                         </div>
                         <div> <a href="./frontend_mentor/css/profile_card.css">Profile Card Component Main CSS</a></div>
                         <div> <a href="./frontend_mentor/css/profile_card.html">Profile Card Component Main</a></div>
+                    </td>
+                    <td>
                         <div> <a href="./frontend_mentor/js/base.html">Base Apparel coming soon</a></div>
                         <div> <a href="./frontend_mentor/js/base.css">Base Apparel coming soon css</a></div>
                         <div> <a href="./frontend_mentor/js/article.css">Article Preview Component Master css</a></div>
@@ -295,12 +327,12 @@
                         <div> <a href="./frontend_mentor/js/intro.html">Intro Component with sign up</a></div>
                         <div> <a href="./frontend_mentor/js/ping.html">Ping Coming Soon Page</a></div>
                         <div> <a href="./frontend_mentor/js/ping.css">Ping Coming Soon Page css</a></div>
-
-
-
-
                     </td>
-                </tr>
+
+
+
+
+
 
             </tbody>
         </table>
