--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </style>
 </head>
 
-<body style="background-image: url(../angular-node/images/green.jpg);line-break: 1.5vh;">
-    <div style="height: 5vh;">
-        <table scope=" col" style="margin:auto">
+<body>
+    <div>
+        <table scope="col" style="margin:auto">
             <caption>
                 <h1>
                     Menu-list of HTML pages</h1>
