--- a/frontend_mentor/js/slide2.html
+++ b/frontend_mentor/js/slide2.html
@@ -19,7 +19,7 @@
         <div id="slide2">
             <div class="quotes"></div>
             <div class="bg"><img class="tanya" src="../image_frontend/image-tanya.jpg">
-                <div class="arrow"><button type="button" onclick="testimonial.html"><img class="prev"
+                <div class="arrow"><button type="button" onclick=""><img class="prev"
                             src="../image_frontend/icon-prev.svg"></button><button type="button" onclick="#slide2"><img
                             class="next" src="../image_frontend/icon-next.svg"></button></div>
             </div>
