--- a/help.html
+++ b/help.html
@@ -1,327 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Profile</title>
 </head>
-
 <body>
-    <div>
-        <table scope="col" style="margin:auto">
-            <caption>
-                Menu-list of HTML pages
-            </caption>
-            <thead>
-                <tr>
-                    <th scope="col">
-                        HTML Pages
-                    </th>
-                    <th scope="col">
-                        HTML Challenges
-                    </th>
-                    <th scope="col">
-                        CSS
-                    </th>
-                    <th scope="col">
-                        Java Script Challenges
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <div>
-                            <a href="./src/Pagea.html">Pagea</a>
-                        </div>
-                        <div>
-                            <a href="./src/Pageb.html">Pageb</a>
-                        </div>
-                        <div>
-                            <a href="./src/Pagec.html">Pagec</a>
-                        </div>
-                        <div>
-                            <a href="./src/Paged.html">Paged</a>
-                        </div>
-                        <div>
-                            <a href="./src/Pagee.html">Pagee</a>
-                        </div>
-                        <div>
-                            <a href="./src/Pagef.html">Pagef</a>
-                        </div>
-                        <div>
-                            <a href="./src/Pageg.html">Pageg</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/Pageh.html">Pageh</a>
-                        </div>
-                        <div>
-                            <a href="./src/Pagei.html">Pagei</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagej.html">Pagej</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagek.html">Pagek</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagel.html">Pagel</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagem.html">Pagem</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagen.html">Pagen</a>
-                        </div>
-                        <div>
-                            <a href="./src/pageo.html">Pageo</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagep.html">Pagep</a>
-                        </div>
-                        <div>
-                            <a href="./src/pageq.html">Pagejq</a>
-                        </div>
-                        <div>
-                            <a href="./src/pager.html">Pager</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagej.html">Pagej</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/pagek.html">Pagek</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/pagel.html">Pagel</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/pagem.html">Pagem</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/pagen.html">Pagen</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/parent.html">Parent</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/child-frame.html">Child Frame</a>
-
-
-                        </div>
-                        <div>
-                            <a href="./src/grand-child-frame.html"> Grand Child Frame</a>
-                        </div>
-                    </td>
-
-                    <td>
-                        <div>
-                            <a href="./src/tribute.html">Tribute</a>
-                        </div>
-                        <div>
-                            <a href="./src/Survey_form.html">Survey</a>
-                        </div>
-
-                        <div>
-                            <a href="./src/stationary_product_launching.html"> Stationary Product Launching</a>
-                        </div>
-                        <div>
-                            <a href="./src/menu-product.html"> Menu Product</a>
-                        </div>
-                        <div>
-                            <a href="./src/menu-contact.html"> Menu Contact</a>
-                        </div>
-                        <div>
-                            <a href="./src/menu-about.html"> Menu About</a>
-                        </div>
-                        <div>
-                            <a href="./src/pen_product_launching.html">Pen Launching page</a>
-                        </div>
-                    </td>
-                    <td>
-                        <div>
-                            <a href="./src/csslessons/page1.html">CSS Lessons:Page 1</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page2.html">CSS Lessons:Page 2</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page3.html">CSS Lessons:Page 3</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page4.html">CSS Lessons:Page 4</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page5.html">CSS Lessons:Page 5</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page6.html">CSS Lessons:Page 6</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page7.html">CSS Lessons:Page 7</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page8.html">CSS Lessons:Page 8</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page9.html">CSS Lessons:Page 9</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page10.css">CSS Lessons:Page 10 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page11.html">CSS Lessons:Page 11</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page12.css">CSS Lessons:Page 12 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page13.html">CSS Lessons:Page 13</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page14.css">CSS Lessons:Page 14 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page15.html">CSS Lessons:Page 15</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page16.css">CSS Lessons:Page 16 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page17.html">CSS Lessons:Page 17</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page18.css">CSS Lessons:Page 18 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page19.html">CSS Lessons:Page 19</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page20.css">CSS Lessons:Page 20 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page21.html">CSS Lessons:Page 21</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page22.html">CSS Lessons:Page 22</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page23.html">CSS Lessons:Page 23</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page24.html">CSS Lessons:Page 24</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page25.css">CSS Lessons:Page 25 css</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page26.html">CSS Lessons:Page 26</a>
-                        </div>
-                        <div>
-                            <a href="./src/csslessons/page27.css">CSS Lessons:Page 27 css</a>
-                        </div>
-                    </td>
-                    <td>
-                        <div>
-                            <a href="./frontend_mentor/css/qr.css">QR code css</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/qr_code.html">QR code</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/nft_preview.css">NFT Preview code CSS</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/nft_preview.html">NFT Preview code</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/order_summary.html">Order Summary</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/order_summary.css">Order Summary Css</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/testimonials.html">Testimonial Grid Section</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/testimonial.css">Testimonial Grid Section CSS</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/fylo.html">Fylo Data Storage component master</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/fylo.css">Fylo Data Storage component master CSS</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/clipboard.html">Clipboard Landing Page Master</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/clipboard.css">Clipboard Landing Page Master CSS</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/chat.html">Chat App</a>
-                        </div>
-                        <div>
-                            <a href="./frontend_mentor/css/chat.css">Chat App CSS</a>
-                        </div>
-                        <div> <a href="./frontend_mentor/css/huddle_landing_blocks.html">Huddle Landing Page With
-                                Alternating Feature Blocks Master</a></div>
-                        <div> <a href="./frontend_mentor/css/huddle_landing_blocks.css">Huddle Landing Page With
-                                Alternating Feature Blocks Master CSS</a></div>
-                        <div> <a href="./frontend_mentor/css/huddle_landing_curve.html">Huddle Landing Page With
-                                Alternating Feature Curve Master</a></div>
-                        <div> <a href="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With
-                                Alternating Feature Curve Master CSS</a></div>
-                        <div> <a href="./frontend_mentor/css/stats_preview_card.html">Stats Preview Card</a></div>
-                        <div> <a href="./frontend_mentor/css/stats_preview_card.css">Stats Preview Card CSS</a></div>
-                        <div> <a href="./frontend_mentor/css/three_column_preview_card.html">3 Column Preview Card</a>
-                        </div>
-                        <div> <a href="./frontend_mentor/css/three_column_preview_card.css">3 Column Preview Card
-                                CSS</a></div>
-                        <div> <a href="./frontend_mentor/css/huddle.html">Huddle</a></div>
-                        <div> <a href="./frontend_mentor/css/huddle.css">Huddle CSS</a></div>
-                        <div> <a href="./frontend_mentor/css/single_price_grid.html">Single Price Grid Component</a>
-                        </div>
-                        <div> <a href="./frontend_mentor/css/single_price_grid.css">Single Price Grid Component CSS</a>
-                        </div>
-                        <div> <a href="./frontend_mentor/css/profile_card.css">Profile Card Component Main CSS</a></div>
-                        <div> <a href="./frontend_mentor/css/profile_card.html">Profile Card Component Main</a></div>
-                        <div> <a href="./frontend_mentor/js/base.html">Base Apparel coming soon</a></div>
-                        <div> <a href="./frontend_mentor/js/base.css">Base Apparel coming soon css</a></div>
-                        <div> <a href="./frontend_mentor/js/article.css">Article Preview Component Master css</a></div>
-                        <div> <a href="./frontend_mentor/js/article.html">Article Preview Component Master</a></div>
-                        <div> <a href="./frontend_mentor/js/share.html">Share</a></div>
-                        <div> <a href="./frontend_mentor/js/faq.html">FAQ</a></div>
-                        <div> <a href="./frontend_mentor/js/faq.css">FAQ CSS</a></div>
-                        <div> <a href="./frontend_mentor/js/intro.css">Intro Component with sign up CSS</a></div>
-                        <div> <a href="./frontend_mentor/js/intro.html">Intro Component with sign up</a></div>
-                        <div> <a href="./frontend_mentor/js/ping.html">Ping Coming Soon Page</a></div>
-                        <div> <a href="./frontend_mentor/js/ping.css">Ping Coming Soon Page css</a></div>
-                    </td>
-
-
-
-
-
-
-            </tbody>
-        </table>
-    </div>
+    <hearder>
+        <h1></h1>
+    </hearder>
+    <main class="container">
+        
+    </main>
 </body>
-
 </html>
