--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                         HTML,CSS Challenges
                     </th>
                     <th scope="col">
-                        HTML,CSS,JSS Challenges
+                        HTML,CSS,JS Challenges
+                    </th>
+                    <th scope="col">
+                        Java Script
                     </th>
                 </tr>
             </thead>
@@ -323,17 +326,44 @@
                         <div> <a href="./frontend_mentor/js/share.html">Share</a></div>
                         <div> <a href="./frontend_mentor/js/faq.html">FAQ</a></div>
                         <div> <a href="./frontend_mentor/js/faq.css">FAQ CSS</a></div>
+                        <div> <a href="./frontend_mentor/js/sample.html">Sample</a></div>
                         <div> <a href="./frontend_mentor/js/intro.css">Intro Component with sign up CSS</a></div>
                         <div> <a href="./frontend_mentor/js/intro.html">Intro Component with sign up</a></div>
                         <div> <a href="./frontend_mentor/js/ping.html">Ping Coming Soon Page</a></div>
                         <div> <a href="./frontend_mentor/js/ping.css">Ping Coming Soon Page css</a></div>
                     </td>
-
-
-
-
-
-
+                    <td>
+                        <div><a href="D:\js_basic_lessons\src\pagea.html">PageA </a></div>
+                        <div><a href="D:\js_basic_lessons\src\pageb.html">PageB </a></div>
+                        <div><a href="D:\js_basic_lessons\src\pagec.html">PageC </a></div>
+                        <div><a href="D:\js_basic_lessons\src\paged.html">PageA </a></div>
+                        <div><a href="D:\js_basic_lessons\src\pagea.html">PageA </a></div>
+                        <div><a href="D:\js_basic_lessons\src\pagea.html">PageA </a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplen.html">SampleN </a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplea.js">SampleA JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampleb.js">SampleB JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplec.js">SampleC JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampled.js">SampleD JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplee.html">SampleE </a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplef.html">sampleF </a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampleg.html">SampleG </a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampleh.html">SampleH</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplei.html">SampleI</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplej.html">SampleJ</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplek.html">SampleK</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplel.html">SampleL</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplem.html">SampleM</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplen.js">SampleN JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampleo.js">SampleO JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samplep.js">SampleP JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampleq.html">SampleQ</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampleq.js">SampleQ JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampler.js">SampleR JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\sampler.html">SampleR</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samples.js">SampleS JS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\samples.html">SampleS</a></div>
+                        <div><a href="D:\js_basic_lessons\src\stringa.js">StringA JS</a></div>
+                    </td>
             </tbody>
         </table>
     </div>
