--- a/frontend_mentor/js/slide2.html
+++ b/frontend_mentor/js/slide2.html
@@ -19,9 +19,9 @@
         <div id="slide2">
             <div class="quotes"></div>
             <div class="bg"><img class="tanya" src="../image_frontend/image-tanya.jpg">
-                <div class="arrow"><button type="button" onclick=""><img class="prev"
-                            src="../image_frontend/icon-prev.svg"></button><button type="button" onclick="#slide2"><img
-                            class="next" src="../image_frontend/icon-next.svg"></button></div>
+                <div class="arrow"><a href="../js/testimonial.html"><img class="prev"
+                            src="../image_frontend/icon-prev.svg"></a><a type="button" onclick="#slide2"><img
+                            class="next" src="../image_frontend/icon-next.svg"></a></div>
             </div>
             <div id="right"> “ I’ve been interested in coding for a while but never taken the jump, until now.
                 I couldn’t recommend this course enough. I’m now in the job of my dreams and so
