--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="image" src="./images/frontend.jpg">
     </main>
     <script>
-        var a = "<b>I am Sujatha Selvaraj</b>.I am in the process of Learning.Area that I am focusing is Frontend of a page.I like to learn from my mistake thatswhat I am doing in my coding.This will updated soon with lot learning.. ";
+        var a = "<b>I am Sujatha Selvaraj</b>.I am in the process of Learning.Area that I am focusing is Frontend of a page.I like to learn from my mistake that'swhat I am doing in my coding.This will updated soon with lots of learning.. ";
         function about() {
             document.getElementById("reply").innerHTML = a;
         }
