--- a/indexes.html
+++ b/indexes.html
@@ -331,6 +331,12 @@
                         <div> <a href="./frontend_mentor/js/intro.html">Intro Component with sign up</a></div>
                         <div> <a href="./frontend_mentor/js/ping.html">Ping Coming Soon Page</a></div>
                         <div> <a href="./frontend_mentor/js/ping.css">Ping Coming Soon Page css</a></div>
+                        <div> <a href="./frontend_mentor/js/testimonial.css">Coding Bootcamp Testimonials Slider Master
+                                css</a></div>
+                        <div> <a href="./frontend_mentor/js/testimonial.html">Coding Bootcamp Testimonials Slider Master
+                            </a></div>
+                        <div> <a href="./frontend_mentor/js/slide2.html">Coding Bootcamp Testimonials Slider Master
+                                support</a></div>
                     </td>
                     <td>
                         <div><a href="D:\js_basic_lessons\src\pagea.html">PageA </a></div>
