--- a/indexes.html
+++ b/indexes.html
@@ -337,6 +337,13 @@
                             </a></div>
                         <div> <a href="./frontend_mentor/js/slide2.html">Coding Bootcamp Testimonials Slider Master
                                 support</a></div>
+                        <div> <a href="./frontend_mentor/js/fylo_dark.html">Fylo Dark Theme Landing Page Master.</a>
+                        </div>
+                        <div> <a href="./frontend_mentor/js/fylo_dark.css">Fylo Dark Theme Landing Page Master CSS.</a>
+                        </div>
+                        <div> <a href="./frontend_mentor/js/blogr.css">Blogr Landing Page CSS.</a></div>
+                        <div> <a href="./frontend_mentor/js/blogr.html">Blogr Landing Page.</a></div>
+
                     </td>
                     <td>
                         <div><a href="D:\js_basic_lessons\src\pagea.html">PageA </a></div>
