--- a/frontend_mentor/js/fylo_dark.html
+++ b/frontend_mentor/js/fylo_dark.html
@@ -33,20 +33,17 @@
             <p class="para">Fylo stores all your most important files in one secure location. <br>Access them
                 wherever
                 you need, share and collaborate with<br> friends family, and co-workers.</p>
-
-
-
         </div>
     </main>
-    <!-- 
-  
- 
 
-  
 
-  
 
-  Get Started
+
+
+
+
+
+    <!--Get Started
 
   Access your files, anywhere
 
