--- a/indexes.html
+++ b/indexes.html
@@ -343,6 +343,10 @@
                         </div>
                         <div> <a href="./frontend_mentor/js/blogr.css">Blogr Landing Page CSS.</a></div>
                         <div> <a href="./frontend_mentor/js/blogr.html">Blogr Landing Page.</a></div>
+                        <div> <a href="./frontend_mentor/js/project_tracking.html">Project tracking intro component.</a>
+                        </div>
+                        <div> <a href="./frontend_mentor/js/project_tracking.css">Project tracking intro component
+                                CSS.</a></div>
 
                     </td>
                     <td>
